AWS 배포 일단 완료 22